# motioncorr

./: CMakeLists.txt  Readme.txt  motionCorrect.py
src/: DFAlign.cpp  DFAlign.h  Makefile  cufunc.cu  cufunc.h  dim.cpp  dim.h  dosefgpu_driftcorr.cpp  func.cpp  func.h  gpuinfo.cu  mfunc.h  mrc.cpp  mrc.h  safefft.cpp  safefft.h
src/SP++3/doc/: ~$++3.0 User Guide.doc
src/SP++3/lib/: libfftw3.la  libfftw3f-3.lib  libfftw3f.la  libfftw3l-3.lib  libfftw3l.la  readme.txt
src/lib/: libfftw3f.la
